<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_profile"
        android:title="@string/menu_profile"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_database"
        android:title="@string/menu_database"
        app:showAsAction="never" />
    <item android:id="@+id/menu_location"
        android:title="@string/menu_location"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_map"
        android:title="@string/menu_map"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_share"
        android:title="@string/menu_share"
        app:showAsAction="never"/>
    <item android:id="@+id/menu_rate"
        android:title="@string/menu_rate"
        app:showAsAction="never"/>

</menu>